# glyph-gl

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: render.rs
scripts/: pre-commit.sh
src/: app.rs  config.rs  lib.rs  main.rs
src/camera/: base.rs  fpv_camera.rs  look_at_camera.rs  mod.rs
src/geometry/: aabb.rs  face.rs  mesh.rs  mod.rs  vertex.rs
src/io/: mock.rs  obj_loader.rs
src/math/: matrices.rs  mod.rs  transformations.rs  vectors.rs
src/output/: ascii_formatter.rs  brailler_formatter.rs  formatter.rs  mod.rs
src/rendering/: frame_buffer.rs  mod.rs  renderer.rs  triangle_rasterizer.rs  z_buffer.rs
src/rendering/pipeline/: fragment_shader.rs  mod.rs  vertex_shader.rs
src/rendering/rasterizer/: mod.rs  triangle_rasterizer.rs
