[package]
name = "glyph-gl"
version = "1.0.3"
edition = "2024"
authors = ["Kirill Zhikharev <zhikh.k@gmail.com>"]
description = "CLI .obj file render"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zhikh23/glyph-gl"

[[bin]]
name = "glyph-gl"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.1"

[profile.release]
debug = true

[[bench]]
name = "render"
harness = false
